--- a/src/EntityFrameworkCore.Extensions/EntityFrameworkCore.Extensions.csproj
+++ b/src/EntityFrameworkCore.Extensions/EntityFrameworkCore.Extensions.csproj
@@ -13,5 +13,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 </Project>
