--- a/.gitignore
+++ b/.gitignore
@@ -201,6 +201,7 @@ ClientBin/
 *.publishsettings
 node_modules/
 orleans.codegen.cs
+.DS_Store
 
 # Since there are multiple workflows, uncomment next line to ignore bower_components
 # (https://github.com/github/gitignore/pull/1529#issuecomment-104372622)
